upgrade to java 21 to use virtual threads